# INDCTRL

./: .env.example  .gitignore  Makefile  README.md  compose.production.yml  docker-compose.yml  pyproject.toml
!/: 01_create_empty_python_fastapi_django_docker_project.md  01_django_only_refactor.md  02_django_domain_models_and_postgres_migrations.md  02_web_interface_redesign.md  03_indctrl_simplify_after_django_only.md  03_shared_python_common_package.md  04_fastapi_auth_service.md  05_fastapi_event_service.md  06_django_control_web_admin.md  07_django_reports_and_dashboard.md  08_docker_compose_nginx_production.md  09_linux_production_documentation.md  10_postgres_backup_restore_maintenance.md  11_tests_quality_and_ci.md  12_final_documentation_and_codex_checklist.md  TODO.md  jazz.md
ESP32/: README.md  platformio.ini
ESP32/docs/: page_rebuild_plan.md
ESP32/include/: lv_conf.h
ESP32/src/: Data.cpp  Data.h  config.h  main.cpp
WEB/: .dockerignore  .env.example  README.md  pyproject.toml
WEB/docker/: service.Dockerfile
WEB/docs/: architecture.md  database.md  docker.md  env.md  esp32-api.md  final-checklist.md  (+3 more)
common/: README.md  pyproject.toml
common/control_common/: __init__.py  config.py  constants.py  db.py  errors.py  logging.py  responses.py  security.py  time_utils.py
docker/: auth-service.Dockerfile  control-web.Dockerfile  event-service.Dockerfile
docs/: architecture.md  database.md  docker.md  env.md  esp32-api.md  final-checklist.md  service.md  web-interface.md
service/: README.md  requirements.txt
tests/: test_django_only_structure.py
(+207 files in other folders)
