[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "control-common"
version = "0.1.0"
description = "Общий пакет INDCTRL для настроек, БД и служебных функций."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "psycopg[binary,pool]>=3.2,<4.0",
]

[tool.setuptools.packages.find]
where = ["."]
